[package]
name = "ppm_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
num_cpus = "1.13.1"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }

[[bench]]
name = "ppm_gen_bench"
harness = false